# DreamLayer

./: .env.example  .gitignore  .pre-commit-config.yaml  APPLICATION_OVERVIEW.md  CHANGES_MADE.md  CODERABBIT_COMPLIANCE_REPORT.md  HOW_TO_TEST_RESET.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_SUMMARY.md  LUMA_CONTRIBUTION_SUMMARY.md  LUMA_PR_DESCRIPTION.md  MASK_UPLOAD_IMPLEMENTATION_SUMMARY.md  MATRIX_RUNNER_IMPLEMENTATION_SUMMARY.md  Makefile  PNG_INFO_FIX_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TASK_3_AUDIT.md  TASK_3_COMPREHENSIVE_REPORT.md  TASK_3_PR_TEMPLATE.md  TASK_3_SUMMARY.md  TEST_REQUIRED_FIELDS.md  create_test_tensors.py  demo_png_fix.py  dreamlayer  ersHFDreamLayer  h origin luma-text2img-node  install_cli.sh  install_windows_dependencies.bat  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_node_env.sh  start_dream_layer.sh  (+7 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.husky/: pre-commit
ComfyUI/: FINAL_SUBMISSION_GUIDE.md  PIKA_FRAME_READY.md  PR_DESCRIPTION_FIXED.md  PULL_REQUEST_SUMMARY.md  check_pika_node.py  execution.py  folder_paths.py  main.py  nodes.py  pixverse_stylize_node.py  server.py  setup.py  simple_node_test.py  startup_config.json  test_debug.py  test_luma_node_structure.py  test_pika_frame_direct.py
api_nodes/: runway_text2img.py
demo_images/: create_demo_comparison.py  create_demo_images.py
docs/: changelog.md  contributing.md  preset_system.md  usage.md
dream_layer_backend/: API_KEY_CONFIGURATION.md  README.md  (+40 more)
(+268 files in other folders)
