[project]
name = "dream-layer-backend"
version = "0.1.0"
description = "Backend for DreamLayer Healthcare Platform"
authors = [
    { name = "irfanmanzoor7760", email = "irfanmanzoor7760@gmail.com" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4,<6.0.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "requests>=2.32.4,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "dream_layer_backend" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
